# task-view-backend

./: .gitignore  CONTEXT.md  README.md  alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt  sample_request.json
alembic/: env.py
alembic/versions/: 0d35f3996a83_add_tags_to_projects_and_tasks.py  9621d195d4e2_add_position_skills_and_experience_.py  be2ab01860e9_initial_migration.py  c1a1bd36567d_add_core_tables_projects_tasks_comments_.py  d58090eb5734_add_password_column_to_users_table.py
app/: __init__.py  main.py
app/ai/: crew.py  openai_client.py
app/ai/config/: agents.yaml  tasks.yaml
app/ai/tools/: database_query_tool.py
app/auth/: dependencies.py  route.py  service.py
app/config/: supabase_client.py
app/db/: database.py  models.py  schema.py
app/middleware/: auth_middleware.py
app/models/: db_models.py  request_models.py
app/modules/comments/: route.py  schema.py  service.py
app/modules/projects/: route.py  schema.py  service.py
app/modules/tasks/: route.py  schema.py  service.py
app/modules/users/: route.py  schema.py  service.py
app/services/: db_service.py
app/utilities/: security.py  token.py
outputs/: analyze_task_output.txt  analyze_users_output.txt  analyze_workload_output.txt
scripts/: setup_projects.py
