[tool.poetry]
name = "task-view-backend"
version = "0.1.0"
description = ""
authors = ["Baraka mukelenga <baraka.m@code-care.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
databases = "^0.9.0"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
crewai = "^0.80.0"
crewai-tools = "^0.14.0"



[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
